<resources>
    <string name="app_name">New Lunar Republic</string>
    <string name="title_activity_video_player">VideoPlayer</string>
    <string name="title_activity_send_mail">Reporter un bug</string>

    <string name="navigation_drawer_open">Ouvrir la navigation</string>
    <string name="navigation_drawer_close">Fermer la navigation</string>

    <string name="display_season">Saison</string>
    <string name="display_episode">Episode</string>
    <string name="app_appTitle">NLR Viewer</string>
    <string name="drawer_appTitle">New Lunar Republic App</string>
    <string name="drawer_episode">Episodes</string>
    <string name="drawer_films">Films</string>
    <string name="drawer_social">Social</string>
    <string name="drawer_other">Autres</string>
    <string name="drawer_nlrsite">Site de la nlr</string>
    <string name="drawer_aboutdev">A Propos</string>
    <string name="about_title">A Propos</string>
    <string name="aboutapp_text">
        Utilisation des api suivantes: \n
         - com.squareup.picasso:picasso:2.71828  \n
         - org.jsoup:jsoup:1.11.3  \n
         - com.github.ybq:Android-SpinKit:1.1.0  \n
         - com.github.halilozercan:BetterVideoPlayer:1.2.alpha1  \n
         - com.android.support:customtabs:25.1.0+  \n
        \n
        Recuperation des information:\n
         - https://newlunarrepublic.fr/api/news  \n
         - https://newlunarrepublic.fr/api/episodes  \n
         - https://newlunarrepublic.fr/api/films  \n
         - https://newlunarrepublic.fr/api/comics  \n
         - https://newlunarrepublic.fr/api/recrutement  \n
         - https://newlunarrepublic.fr/api/bonus  \n
        \n
        Palette de couleurs: \n
         - https://www.deviantart.com/midnightblitzz/ \n
        \n
        Données envoyées vers Google Analytics:\n
         - Clic sur un Episode / Film / Comic \n
         - Ouverture de l\'application \n
         - Temps d\'utilisation / Watch time \n
    </string>

    <string name="drawer_bugreport">Reporter un bug</string>
    <string name="email_title">Titre: </string>
    <string name="email_replyto">ReplyTo: </string>
    <string name="email_msg">Message: </string>
    <string name="email_needinstall">Veuillez installer un client mail</string>
    <string name="email_sended">Envoyer via mail</string>
    <string name="email_intentText">Envoyer le rapport via MAIL</string>

    <string name="social_nlr_title">Social</string>
    <string name="social_nlr_web" translatable="false">https://www.newlunarrepublic.fr</string>
    <string name="social_nlr_fbPage" translatable="false">NlrFR</string>
    <string name="social_nlr_fbPage_id" translatable="false">1403225863250577</string>
    <string name="social_nlr_twitter" translatable="false">\@NlrFR</string>
    <string name="social_nlr_email" translatable="false">royalguard\@newlunarrepublic.fr</string>
    <string name="social_nlr_site" translatable="false">newlunarrepublic.fr</string>
    <string name="social_nlr_discord" translatable="false">https://discordapp.com/invite/suSxXSP</string>

    <string name="drawer_allies">Alliés</string>

    <string name="drawer_news">Nouvelles</string>

    <string name="drawer_comicen">Comics EN</string>
    <string name="drawer_comicfr">Comics FR</string>


    <string name="aboutdev_title">A propos du dev / App</string>
    <string name="aboutdev_by">Application développée par Turtleforgaming</string>
    <string name="aboutdev_web" translatable="false">https://turtleforgaming.fr</string>
    <string name="aboutdev_github" translatable="false">https://github.com/TurtleForGaming</string>
    <string name="aboutdev_copiedtoclip">Copier dans le presse papier</string>
    <string name="aboutdev_appapps">Information sur l\'application / GA</string>

    <string name="title_activity_video_player_v2">VideoPlayerV2</string>
    <string name="title_activity_video_player_activatesubs">Activer les sous-titres</string>
    <string name="title_activity_video_player_desactivatesubs">Désactiver les sous-titres</string>
    <string name="title_activity_video_player_hideui">Cacher l\u0027UI</string>
    <string name="title_activity_video_player_rescale">Rescale</string>
    <string name="video_reloaderror">Il y a eu une erreur durant le chargement de la video.\nSi cela arrive souvent, essayez de diminuer la qualitée.\nLa video va redémarrer.</string>

    <string name="loadingscreen_initial">Le contenu va charger sous peu.</string>
    <string name="loadingscreen_updatingviews">Affichage du contenu en cours.</string>
    <string name="loadingscreen_updatingviews_download">Téléchargement de la liste des épisodes</string>
    <string name="loadingscreen_updatingviews_episodes">Traitement des épisodes</string>
    <string name="loadingscreen_updatingviews_films">Traitement des films</string>
    <string name="loadingscreen_updatingviews_comics">Traitement des comics</string>
    <string name="loadingscreen_updatingviews_allies">Traitement des alliés</string>
    <string name="loadingscreen_updatingviews_bonus">Traitement des àpisodes bonus</string>
    <string name="loadingscreen_updatingviews_news">Traitement des news</string>

    <string name="menu_reloadcontent">Rafraîchir le contenu</string>
    <string name="menu_settings_style">Thème</string>
    <string name="menu_settings">Paramètres</string>
    <string-array name="menu_setting_styles">
        <item>Default</item>
        <item>Random</item>
        <item>Twilight Sparkle</item>
        <item>Apple Jack</item>
        <item>Pinkie Pie</item>
        <item>Rarity</item>
        <item>Flutter Shy</item>
        <item>Rainbow Dash</item>
        <item>Spike</item>
        <item>Luna</item>
        <item>Celestia</item>
        <item>King Sombra</item>
    </string-array>
    <string-array name="menu_setting_langs">
        <item>Français</item>
        <item>English</item>
    </string-array>

    <string name="menu_settings_lang">Langue</string>
    <string name="menu_settings_save">Sauvegarder</string>

    <string name="drawer_bonus">Episodes bonus</string>

    <string name="action_settings">Paramètres</string>
    <string name="action_newversion">Nouvelle version</string>
    <string name="action_actualversion">Version actuelle</string>
    <string name="action_newupdate">Mise à jour disponible</string>

    <string name="privacy_yes">J\'accepte</string>
    <string name="privacy_no">Je refuse</string>
    <string name="privacy_title">Consentement tracking</string>
    <string name="privacy_message">Ce message ne va s\'afficher qu\'une fois. Cette version et la prochaine contiennent les analytics de Google. En cliquant j\'accepte, vous acceptez l\'envoi de données d\'utilisation de l\'application. Si vous refusez, aucune donnée ne sera transmise.</string>
    <string name="privacy_change">Paramètres de confidentialité</string>

    <string name="error_episode_notreleased">Désolé cet episode n\'est pas encore disponible. Date UTC de sortie: </string>
    <string name="error_episode_notreleased_unknown">Inconnu</string>
    <string name="error_episode_embeded">Désolé cet episode est externe à la NLR, il ne peut pas s\'afficher dans l\'application. Ouverture d\'un navigateur.</string>

    <string name="no_internet">Pas de connexion Internet</string>
    <string name="no_internet_message">Il semblerait que vous n\'êtes pas connecté à Internet. Veuillez vous assurer que vous êtes en ligne et réessayez.</string>
</resources>
