<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/social_nlr_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button_nlr_fb"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_nlr_web"
            app:srcCompat="@drawable/ic_social_fb" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/social_nlr_fbPage"
            app:layout_constraintBottom_toBottomOf="@+id/button_nlr_fb"
            app:layout_constraintStart_toEndOf="@+id/button_nlr_fb"
            app:layout_constraintTop_toTopOf="@+id/button_nlr_fb" />

        <ImageButton
            android:id="@+id/button_nlr_twitter"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_nlr_fb"
            app:srcCompat="@drawable/ic_social_tw" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/social_nlr_twitter"
            app:layout_constraintBottom_toBottomOf="@+id/button_nlr_twitter"
            app:layout_constraintStart_toEndOf="@+id/button_nlr_twitter"
            app:layout_constraintTop_toTopOf="@+id/button_nlr_twitter" />

        <ImageButton
            android:id="@+id/button_nlr_sendmail"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_nlr_twitter"
            app:srcCompat="@drawable/ic_social_mail" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/social_nlr_email"
            app:layout_constraintBottom_toBottomOf="@+id/button_nlr_sendmail"
            app:layout_constraintStart_toEndOf="@+id/button_nlr_sendmail"
            app:layout_constraintTop_toTopOf="@+id/button_nlr_sendmail" />

        <ImageButton
            android:id="@+id/button_nlr_discord"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_nlr_sendmail"
            app:srcCompat="@drawable/ic_social_discord" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/social_nlr_discord"
            app:layout_constraintBottom_toBottomOf="@+id/button_nlr_discord"
            app:layout_constraintStart_toEndOf="@+id/button_nlr_discord"
            app:layout_constraintTop_toTopOf="@+id/button_nlr_discord" />

        <ImageButton
            android:id="@+id/button_nlr_paypal"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_nlr_discord"
            app:srcCompat="@drawable/ic_social_paypal" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/social_nlr_paypal"
            app:layout_constraintBottom_toBottomOf="@+id/button_nlr_paypal"
            app:layout_constraintStart_toEndOf="@+id/button_nlr_paypal"
            app:layout_constraintTop_toTopOf="@+id/button_nlr_paypal" />

        <ImageButton
            android:id="@+id/button_nlr_web"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/ic_menu_earth" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/social_nlr_web"
            app:layout_constraintBottom_toBottomOf="@+id/button_nlr_web"
            app:layout_constraintStart_toEndOf="@+id/button_nlr_web"
            app:layout_constraintTop_toTopOf="@+id/button_nlr_web" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
